--- a/SweepStakes/SweepStakes.csproj
+++ b/SweepStakes/SweepStakes.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contestant.cs" />
+    <Compile Include="Contestnt.cs" />
     <Compile Include="ISweepstakesManager.cs" />
     <Compile Include="MarketingFirm.cs" />
     <Compile Include="Program.cs" />
@@ -52,7 +52,7 @@
     <Compile Include="Sweepstakes.cs" />
     <Compile Include="SweepstakesQueueManager.cs" />
     <Compile Include="SweepstakesStackManager.cs" />
-    <Compile Include="Uerinterface.cs" />
+    <Compile Include="Userinterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
